--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ hr {
   position: relative;
   padding-top: 100px;
   padding-bottom: 300px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .middle-container {
@@ -76,13 +78,12 @@ hr {
 .top-cloud {
   position: absolute;
   left: 70%;
-  top: 5%;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 30%;
-  bottom: 50%;
+  right: 40%;
+  top: 10%;
 }
 
 .code-img {
@@ -102,8 +103,8 @@ hr {
 }
 
 .profile-pic {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  padding: 3rem 0 3rem 0;
+  width: 400px;
 }
 
 .footer-link {
@@ -210,4 +211,19 @@ hr {
   width: 40%;
   padding-top: -10px;
   margin: 40px auto 60px;
+}
+
+.upper-portion {
+  padding: 0;
+}
+
+.apple-frame {
+  padding-top: 3rem;
+}
+
+/* button position */
+
+.button-class {
+  padding-top: 4rem;
+  margin-bottom: -4rem;
 }
