--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ hr {
 }
 
 .middle-container {
-  margin: 100px 0 100px 0;
+  margin: 0 0 100px 0;
 }
 
 .bottom-container {
@@ -79,7 +79,7 @@ hr {
 
 .top-cloud {
   position: absolute;
-  left: 60%;
+  left: 65%;
 }
 
 .bottom-cloud {
