--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,14 @@ body {
 }
 
 h1 {
-  color: #bdecec;
+  color: #e8f1f5;
   font-size: 5.625rem;
   font-family: "Sacramento", cursive;
   margin: 50px auto -10px auto;
 }
 
 h2 {
-  color: #66bfbf;
+  color: #e8f1f5;
   font-family: "Montserrat", sans-serif;
   font-size: 1.875rem;
   font-weight: normal;
@@ -53,10 +53,9 @@ hr {
 }
 
 .top-container {
-  background-color: #74807d;
+  background-color: #005691;
   position: relative;
   padding-top: 100px;
-  padding-bottom: 300px;
   padding-left: 0;
   padding-right: 0;
   margin: 0;
@@ -67,7 +66,7 @@ hr {
 }
 
 .bottom-container {
-  background-color: #66bfbf;
+  background-color: #004a7c;
   height: 200px;
 }
 
@@ -109,6 +108,7 @@ hr {
   right: 30px;
   padding-left: 60px;
   margin: 0;
+  color: #fafafa;
 }
 
 .p1 {
@@ -130,12 +130,12 @@ hr {
   font-size: 18px;
   font-weight: 100;
   padding: 8px;
-  background-color: #11999e;
-  -webkit-box-shadow: 1px 1px 20px 0 #11999e;
-  -moz-box-shadow: 1px 1px 20px 0 #11999e;
-  box-shadow: 1px 1px 20px 0 #11999e;
-  text-shadow: 1px 1px 20px #11999e;
-  border: solid #11999e 5px;
+  background-color: #004a7c;
+  -webkit-box-shadow: 1px 1px 20px 0 #004a7c;
+  -moz-box-shadow: 1px 1px 20px 0 #004a7c;
+  box-shadow: 1px 1px 20px 0 #004a7c;
+  text-shadow: 1px 1px 20px #004a7c;
+  border: solid #004a7c 5px;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
@@ -164,12 +164,12 @@ hr {
   font-size: 18px;
   font-weight: 100;
   padding: 8px;
-  background-color: #11999e;
-  -webkit-box-shadow: 1px 1px 20px 0 #11999e;
-  -moz-box-shadow: 1px 1px 20px 0 #11999e;
-  box-shadow: 1px 1px 20px 0 #11999e;
-  text-shadow: 1px 1px 20px #11999e;
-  border: solid #11999e 5px;
+  background-color: #004a7c;
+  -webkit-box-shadow: 1px 1px 20px 0 #004a7c;
+  -moz-box-shadow: 1px 1px 20px 0 #004a7c;
+  box-shadow: 1px 1px 20px 0 #004a7c;
+  text-shadow: 1px 1px 20px #004a7c;
+  border: solid #004a7c 5px;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
@@ -227,4 +227,16 @@ hr {
   .bottom-cloud {
     position: relative;
   }
+}
+
+.section-text-color {
+  color: #004a7c;
+}
+
+.final-part {
+  color: #e8f1f5;
+}
+
+.hr-padding {
+  margin-top: 100px;
 }
